--- a/src/main/webapp/style/main.css
+++ b/src/main/webapp/style/main.css
@@ -40,6 +40,7 @@ th, td {
     right: 20px;
     background-color: #fff;
     border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0 0 0 / 15%);
     font-size: 18px;
     font-weight: 600;
     padding: 8px 16px;
